unit_3/css/style.css
body{
	background-color: #09203f;
	color: #ffafbd;
	text-align: center;
}

hr{
	widows: 800px;
}

h1{
	font-family: Impact, Charcoal, sans-serif;
	font-size: 40px;
	text-align: center;
}

ul{
	text-align: center;
}

p{
	text-align: left;
}

img{
	width: 60%;
	height: auto;
}

#slogan{
	text-align: center;
	font-style: italic;

}

a:hover {
    color: #ffafbd;
}

a{
	color: hotpink;
}

#bullet{
	text-align: center;
}

li{
	text-align: center;
}

